@@ -1,11 +1,11 @@
-package com.attilapalf.exceptional.exception;
+package com.attilapalf.exceptional.utils;
 
 import android.content.Context;
 import android.content.SharedPreferences;
 
 import com.attilapalf.exceptional.R;
+import com.attilapalf.exceptional.model.Exception;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
@@ -19,28 +19,19 @@ import java.util.Set;
 public class ExceptionPreferences {
 
     /** This is the application's preferences */
-    private SharedPreferences sharedPreferences;
+    private static SharedPreferences sharedPreferences;
 
     /** This is the application's sharedPreferences editor*/
-    private SharedPreferences.Editor editor;
+    private static SharedPreferences.Editor editor;
 
     /**
      * This LinkedList stores the last 30 exceptions the user got.
      * */
-    private LinkedList<Exception> storedExceptions = new LinkedList<>();
-    public final int STORE_SIZE = Integer.MAX_VALUE;
+    // TODO: synchronize this motherfucker
+    private static List<Exception> storedExceptions = Collections.synchronizedList(new LinkedList<Exception>());
+    public static final int STORE_SIZE = Integer.MAX_VALUE;
 
-    private static ExceptionPreferences instance;
-
-    public static ExceptionPreferences getInstance(Context context) {
-        if (instance == null) {
-            instance = new ExceptionPreferences(context);
-        }
-
-        return instance;
-    }
-
-    private ExceptionPreferences(Context context) {
+    public static void initalize(Context context) {
         String PREFS_NAME = context.getString(R.string.exception_preferences);
         sharedPreferences = context.getSharedPreferences(PREFS_NAME, Context.MODE_PRIVATE);
 
@@ -55,7 +46,8 @@ public class ExceptionPreferences {
         for (String s : keyArray) {
             String excJson = (String) store.get(s);
             Exception e = Exception.fromString(excJson);
-            storedExceptions.addLast(e);
+            storedExceptions.add(storedExceptions.size(), e);
+            //storedExceptions.addLast(e);
         }
 
         Collections.sort(storedExceptions, new Exception.DateComparator());
@@ -63,37 +55,38 @@ public class ExceptionPreferences {
 
 
 
-    public int exceptionCount() {
+    public static int exceptionCount() {
         return storedExceptions.size();
     }
 
 
 
 
-    public void addException(Exception e) {
-//        Collections.sort(storedExceptions, new Exception.DateComparator());
+    public static void addException(Exception e) {
         if (storedExceptions.size() >= STORE_SIZE) {
             removeLast();
         }
-        storedExceptions.addFirst(e);
+        //storedExceptions.addFirst(e);
+        storedExceptions.add(0, e);
         editor.putString(e.getInstanceId(), e.toString());
         editor.apply();
     }
 
 
-    private void removeLast() {
-        Exception removed = storedExceptions.removeLast();
+    private static void removeLast() {
+        //Exception removed = storedExceptions.removeLast();
+        Exception removed = storedExceptions.remove(storedExceptions.size() - 1);
         editor.remove(removed.getInstanceId());
     }
 
 
-    public Exception getException(int id) {
+    public static Exception getException(int id) {
         String exception_json = sharedPreferences.getString(Integer.toString(id), "");
         return Exception.fromString(exception_json);
     }
 
 
-    public void removeException(Exception e) {
+    public static void removeException(Exception e) {
         editor.remove(e.getInstanceId());
         editor.apply();
         for (int i = 0; i < storedExceptions.size(); i++) {
@@ -105,8 +98,7 @@ public class ExceptionPreferences {
     }
 
 
-
-    public List<Exception> getExceptionList() {
+    public static List<Exception> getExceptionList() {
         return storedExceptions;
     }
 }
